fix(header): Layout on mobile viewports

--- a/src/ui/Header/Header.module.css
+++ b/src/ui/Header/Header.module.css
@@ -13,7 +13,7 @@
 
 .header > button {
   display: flex;
-  margin-left: 16px;
+  margin: 0 16px;
 }
 
 .header svg,
